@@ -3,6 +3,15 @@
 	Backport from mainline
 	2017-03-20  Martin Liska  <mliska@suse.cz>
 
+	PR middle-end/79753
+	* tree-chkp.c (chkp_build_returned_bound): Do not build
+	returned bounds for a LHS that's not a BOUNDED_P type.
+
+2017-03-22  Martin Liska  <mliska@suse.cz>
+
+	Backport from mainline
+	2017-03-20  Martin Liska  <mliska@suse.cz>
+
 	PR target/79769
 	PR target/79770
 	* tree-chkp.c (chkp_find_bounds_1): Handle REAL_CST,
